force-app/main/default/objects/Opportunity/fields/MeW_Timeframe_in_months__c.field-meta.xml
<CustomField>
    <fullName>MeW_Timeframe_in_months__c</fullName>
    <label>MeW Timeframe (in months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>