force-app/main/default/objects/Opportunity/fields/Midpoint_Incentive_Payout__c.field-meta.xml
<CustomField>
    <fullName>Midpoint_Incentive_Payout__c</fullName>
    <description>The full campaign payout if the partner hits the midpoint of the payout matrix every payout period.</description>
    <inlineHelpText>The full campaign payout if the partner hits the midpoint of the payout matrix every payout period.</inlineHelpText>
    <label>Annualized Mid-Point Incentive Payout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>