force-app/main/default/objects/Opportunity/fields/Minimum_Volume_Supported__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Volume_Supported__c</fullName>
    <label>Minimum Volume Supported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>