force-app/main/default/objects/Opportunity/fields/MNDA_Signed__c.field-meta.xml
<CustomField>
    <fullName>MNDA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MNDA Signed</label>
    <type>Checkbox</type>
</CustomField>