force-app/main/default/objects/Opportunity/fields/Monthly_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Active_Users__c</fullName>
    <description>Used for Performance and Activation Incentives</description>
    <label>Monthly Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>