force-app/main/default/objects/Opportunity/fields/MoU_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>MoU_Request_Status__c</fullName>
    <description>Field used to request a Memo of Understanding from the Legal team. The legal team will populate the MoU using a URL field and update this field to In Progress and Complete.</description>
    <inlineHelpText>Memo of Understanding. BD Reps: Select Requested to request an MoU from the Legal team.</inlineHelpText>
    <label>MoU Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>