force-app/main/default/objects/Opportunity/fields/MSA_Approver__c.field-meta.xml
<CustomField>
    <fullName>MSA_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>