force-app/main/default/objects/Opportunity/fields/MSA_Legal_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>MSA_Legal_Approval_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>MSA Legal Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Waiting On Approval</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>