force-app/main/default/objects/Opportunity/fields/MSA_Renewal__c.field-meta.xml
<CustomField>
    <fullName>MSA_Renewal__c</fullName>
    <defaultValue>&quot;Auto Renewal&quot;</defaultValue>
    <label>MSA Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Renewal</fullName>
            </value>
            <value>
                <fullName>No Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>