force-app/main/default/objects/Opportunity/fields/MSA_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>MSA_Request_Type__c</fullName>
    <label>MSA Request Type_DNU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Beta Agreement</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>