force-app/main/default/objects/Opportunity/fields/Needs_Attachmnet_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>Needs_Attachmnet_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Attachmnet Recalculation</label>
    <type>Checkbox</type>
</CustomField>