force-app/main/default/objects/Opportunity/fields/Needs_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Needs_Compliance__c</fullName>
    <formula>AND(
OR(
   RecordType.Name = &apos;Business Development&apos;,
   RecordType.Name = &apos;Product Integrations&apos;,
   AND(
      RecordType.Name = &apos;Renewal&apos;,
      ISPICKVAL(Type,&apos;Existing Business&apos;) 
   )
),  
OR(
   CONTAINS(Products_Selected__c, &apos;Accounts API&apos;),
   CONTAINS(Products_Selected__c, &apos;Activation Incentives&apos;),
   CONTAINS(Products_Selected__c, &apos;Blockchain Partnerships&apos;),
   CONTAINS(Products_Selected__c, &apos;Channel Sales&apos;),
   CONTAINS(Products_Selected__c, &apos;Crypto Deposits&apos;),
   CONTAINS(Products_Selected__c, &apos;Crypto Payouts&apos;),
   CONTAINS(Products_Selected__c, &apos;Cybavo VAULT&apos;),
   CONTAINS(Products_Selected__c, &apos;Cybavo Cashflow Manager&apos;),
   CONTAINS(Products_Selected__c, &apos;Indirect Liquidity Partners&apos;),
   CONTAINS(Products_Selected__c, &apos;Institutional Trading Partnership&apos;),
   CONTAINS(Products_Selected__c, &apos;Loans&apos;),
   CONTAINS(Products_Selected__c, &apos;Performance Incentives&apos;),
   CONTAINS(Products_Selected__c, &apos;Product Integrations&apos;),
   CONTAINS(Products_Selected__c, &apos;PSP Crypto Settlement&apos;),
   CONTAINS(Products_Selected__c, &apos;Referrals&apos;),
   CONTAINS(Products_Selected__c, &apos;Verite&apos;),
   CONTAINS(Products_Selected__c, &apos;Gas Station&apos;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Compliance?</label>
    <type>Checkbox</type>
</CustomField>