force-app/main/default/objects/Opportunity/fields/Needs_Contract_Approval__c.field-meta.xml
<CustomField>
    <fullName>Needs_Contract_Approval__c</fullName>
    <formula>OR(
   Contains(Products_Selected__c, &apos;Accounts API&apos;),
   Contains(Products_Selected__c, &apos;Crypto Deposits&apos;),
   Contains(Products_Selected__c, &apos;Crypto Payouts&apos;),
   Contains(Products_Selected__c, &apos;Cybavo VAULT&apos;),
   Contains(Products_Selected__c, &apos;Cybavo Cashflow Manager&apos;),
   Contains(Products_Selected__c, &apos;PSP Crypto Settlement&apos;),
   Contains(Products_Selected__c, &apos;Verite&apos;),
   Contains(Products_Selected__c, &apos;Activation Incentives&apos;),
   Contains(Products_Selected__c, &apos;Performance Incentives&apos;),
   Contains(Products_Selected__c, &apos;Channel Sales&apos;),
   Contains(Products_Selected__c, &apos;Referrals&apos;),
   Contains(Products_Selected__c, &apos;Blockchain Partnerships&apos;),
   Contains(Products_Selected__c, &apos;Indirect Liquidity Partners&apos;),
   Contains(Products_Selected__c, &apos;Institutional Trading Partnership&apos;),
   Contains(Products_Selected__c, &apos;Loans&apos;),
   Contains(Products_Selected__c, &apos;Product Integrations&apos;),
   Contains(Products_Selected__c, &apos;Programmable Wallets&apos;),
   Contains(Products_Selected__c, &apos;Smart Contract Platform&apos;),
   Contains(Products_Selected__c, &apos;Gas Station&apos;),
   AND(
      ISPICKVAL(Custom_Pricing1__c,&apos;Yes&apos;),
      Products_Selected__c != &apos;Core API;Read Only API&apos;,
      Products_Selected__c != &apos;Read Only API;Core API&apos;,
      Products_Selected__c != &apos;Read Only API&apos;,
      Products_Selected__c != &apos;Core API&apos;
   
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Contract Approval</label>
    <type>Checkbox</type>
</CustomField>