force-app/main/default/objects/Opportunity/fields/Needs_Kash_Approval__c.field-meta.xml
<CustomField>
    <fullName>Needs_Kash_Approval__c</fullName>
    <formula>OR(
CONTAINS(Products_Selected__c, &apos;Product Integrations&apos;),
CONTAINS(Products_Selected__c, &apos;Indirect Liquidity Partners&apos;),
CONTAINS(Products_Selected__c, &apos;Activation Incentives&apos;),
CONTAINS(Products_Selected__c, &apos;Institutional Trading Partnership&apos;),
CONTAINS(Products_Selected__c, &apos;Loans&apos;),
CONTAINS(Products_Selected__c, &apos;Cybavo VAULT&apos;),
CONTAINS(Products_Selected__c, &apos;Cybavo Cashflow Manager&apos;),
CONTAINS(Products_Selected__c, &apos;PSP Crypto Settlement&apos;),
CONTAINS(Products_Selected__c, &apos;Verite&apos;),
CONTAINS(Products_Selected__c, &apos;Channel Sales&apos;),
CONTAINS(Products_Selected__c, &apos;Referrals&apos;),
CONTAINS(Products_Selected__c, &apos;Blockchain Partnerships&apos;)
)</formula>
    <label>Needs Kash Approval</label>
    <type>Checkbox</type>
</CustomField>