force-app/main/default/objects/Opportunity/fields/Needs_Pricing_Approval__c.field-meta.xml
<CustomField>
    <fullName>Needs_Pricing_Approval__c</fullName>
    <formula>OR(
ISPICKVAL(Custom_Pricing1__c, &apos;Yes&apos;),
ISPICKVAL(Are_We_Waiving_Network_Fees__c, &apos;Yes&apos;),
CONTAINS(Products_Selected__c, &apos;Activation Incentives&apos;),
CONTAINS(Products_Selected__c, &apos;Blockchain Partnerships&apos;),
CONTAINS(Products_Selected__c, &apos;Institutional Trading Partnership&apos;),
CONTAINS(Products_Selected__c, &apos;Loans&apos;),
CONTAINS(Products_Selected__c, &apos;Channel Sales&apos;),
CONTAINS(Products_Selected__c, &apos;Indirect Liquidity Partners&apos;),
CONTAINS(Products_Selected__c, &apos;Performance Incentives&apos;),
CONTAINS(Products_Selected__c, &apos;Product Integrations&apos;),
CONTAINS(Products_Selected__c, &apos;Referrals&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Pricing Approval</label>
    <type>Checkbox</type>
</CustomField>