force-app/main/default/objects/Opportunity/fields/Needs_Product_Approval__c.field-meta.xml
<CustomField>
    <fullName>Needs_Product_Approval__c</fullName>
    <formula>AND(
OR(
RecordType.DeveloperName = &apos;Business_Development&apos;,
RecordType.DeveloperName = &apos;Product_Integrations&apos;
),
OR(
CONTAINS(Products_Selected__c, &apos;Accounts API&apos;),
CONTAINS(Products_Selected__c, &apos;PSP Crypto Settlement&apos;),
CONTAINS(Products_Selected__c, &apos;Cybavo VAULT&apos;),
CONTAINS(Products_Selected__c, &apos;Cybavo Cashflow Manager&apos;),
CONTAINS(Products_Selected__c, &apos;Blockchain Partnerships&apos;),
CONTAINS(Products_Selected__c, &apos;Incentives&apos;),
CONTAINS(Products_Selected__c, &apos;Institutional Trading Partnership&apos;),
CONTAINS(Products_Selected__c, &apos;Loans&apos;),
CONTAINS(Products_Selected__c, &apos;Channel Sales&apos;),
CONTAINS(Products_Selected__c, &apos;Referrals&apos;),
CONTAINS(Products_Selected__c, &apos;Product Integrations&apos;),
CONTAINS(Products_Selected__c, &apos;Indirect Liquidity Partners&apos;),
CONTAINS(Products_Selected__c, &apos;Verite&apos;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Product Approval</label>
    <type>Checkbox</type>
</CustomField>