force-app/main/default/objects/Opportunity/fields/Needs_Solution_Validation__c.field-meta.xml
<CustomField>
    <fullName>Needs_Solution_Validation__c</fullName>
    <formula>OR(
   CONTAINS(Products_Selected__c, &apos;Accounts API&apos;),
   CONTAINS(Products_Selected__c, &apos;Crypto Payouts&apos;),
   CONTAINS(Products_Selected__c, &apos;Programmable Wallets&apos;),
   CONTAINS(Products_Selected__c, &apos;Verite&apos;),
   CONTAINS(Products_Selected__c, &apos;Cybavo VAULT&apos;),
   CONTAINS(Products_Selected__c, &apos;Cybavo Cash Flow Manager&apos;),
   CONTAINS(Products_Selected__c, &apos;Crypto Deposits&apos;),
   CONTAINS(Products_Selected__c, &apos;PSP Crypto Settlement&apos;),
   CONTAINS(Products_Selected__c, &apos;Smart Contract Platform&apos;),
   CONTAINS(Products_Selected__c, &apos;Gas Station&apos;),
   CONTAINS(Products_Selected__c, &apos;Channel Sales&apos;),
   CONTAINS(Products_Selected__c, &apos;Referrals&apos;),
   CONTAINS(Products_Selected__c, &apos;Product Integrations&apos;),
   CONTAINS(Products_Selected__c, &apos;Indirect Liquidity Partners&apos;),
   CONTAINS(Products_Selected__c, &apos;CCTP&apos;),
   CONTAINS(Products_Selected__c, &apos;Bridged USDC Standard&apos;),
   CONTAINS(Products_Selected__c, &apos;Activation Incentives&apos;),
   CONTAINS(Products_Selected__c, &apos;Performance Incentives&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Solution Validation</label>
    <type>Checkbox</type>
</CustomField>