force-app/main/default/objects/Opportunity/fields/Next_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payout_Date__c</fullName>
    <label>Next Payout Date</label>
    <type>Date</type>
</CustomField>