force-app/main/default/objects/Opportunity/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <inlineHelpText>Use this field to keep a running log of all next steps throughout the deal cycle.</inlineHelpText>
    <label>Next Steps History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>