force-app/main/default/objects/Opportunity/fields/No_Compliance_Analyst_Found__c.field-meta.xml
<CustomField>
    <fullName>No_Compliance_Analyst_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Compliance Analyst Found_DNU</label>
    <type>Checkbox</type>
</CustomField>