force-app/main/default/objects/Opportunity/fields/Notes_for_Compliance_Review__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Compliance_Review__c</fullName>
    <description>Used by the Sales team to enter notes before submitting opps to compliance team</description>
    <inlineHelpText>Enter any notes that will be useful for the Compliance team before they begin their review.</inlineHelpText>
    <label>Notes for Compliance Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>