force-app/main/default/objects/Opportunity/fields/Number_Of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Attachments__c</fullName>
    <label>Number Of Attachments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>