force-app/main/default/objects/Opportunity/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>A simple framing of the strategic goals of working with that partner. Should include some strategic rationale and a clear articulation of the product-market fit for USDC and the use case. Example: Significantly grow USDC distribution in X region by partnering with the region’s top super-app with a reach of 50 million digital-native active users focusing on remittance.</description>
    <inlineHelpText>A simple framing of the strategic goals of working with that partner. Should include some strategic rationale and a clear articulation of the product-market fit for USDC and the use case. Example: Significantly grow USDC distribution in X region by partnering with the region’s top super-app with a reach of 50 million digital-native active users focusing on remittance.</inlineHelpText>
    <label>Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>