force-app/main/default/objects/Opportunity/fields/Opportunity_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Case_Id__c</fullName>
    <description>Used to store the 18 digit record Case Id</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Case Id</label>
    <type>Text</type>
</CustomField>