force-app/main/default/objects/Opportunity/fields/Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency__c</fullName>
    <description>Used for accounting purposes to identify which currency the customer/partner prefers.</description>
    <inlineHelpText>Used for accounting purposes to identify which currency the customer/partner prefers.</inlineHelpText>
    <label>Opportunity Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>COP</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>NTD</fullName>
                <isActive>false</isActive>
                <label>NTD</label>
            </value>
            <value>
                <fullName>TWD</fullName>
                <isActive>false</isActive>
                <label>TWD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>