force-app/main/default/objects/Opportunity/fields/Opportunity_Potential_Detail__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Potential_Detail__c</fullName>
    <inlineHelpText>What kind of impact will this opportunity have on the business? Please be especially descriptive if this is a &quot;High Impact&quot; deal.</inlineHelpText>
    <label>Opportunity Potential Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>