force-app/main/default/objects/Opportunity/fields/Outside_Of_Pre_Approved_Margins__c.field-meta.xml
<CustomField>
    <fullName>Outside_Of_Pre_Approved_Margins__c</fullName>
    <inlineHelpText>Is your performance incentive campaign outside our usual pre-approved margins?</inlineHelpText>
    <label>Outside Of Pre-Approved Margins</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>