force-app/main/default/objects/Opportunity/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>