force-app/main/default/objects/Opportunity/fields/Owners_Managers_Name__c.field-meta.xml
<CustomField>
    <fullName>Owners_Managers_Name__c</fullName>
    <formula>Owner_s_Manager__r.FirstName + &apos; &apos; + Owner_s_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Manager&apos;s Name</label>
    <type>Text</type>
</CustomField>