force-app/main/default/objects/Opportunity/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Used to identify the type of partnership</description>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Growth / Incentive Campaigns</fullName>
            </value>
            <value>
                <fullName>Technical partnership non-dev</fullName>
            </value>
            <value>
                <fullName>Integration Services Deals</fullName>
            </value>
            <value>
                <fullName>Multi-party ecosystem program</fullName>
            </value>
            <value>
                <fullName>Channel Partnerships / Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>