force-app/main/default/objects/Opportunity/fields/Partnership_Construct__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Construct__c</fullName>
    <formula>IF(!ISBLANK(Partnership_Construct_Document_ID__c),&apos;https://docs.google.com/document/d/&apos; +  Partnership_Construct_Document_ID__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Construct</label>
    <type>Text</type>
</CustomField>