force-app/main/default/objects/Opportunity/fields/Partnership_Construct_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Construct_Document_ID__c</fullName>
    <label>Partnership Construct Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>