force-app/main/default/objects/Opportunity/fields/Partnership_Construct_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Construct_Last_Updated_Date__c</fullName>
    <label>Partnership Construct Last Updated Date</label>
    <type>DateTime</type>
</CustomField>