force-app/main/default/objects/Opportunity/fields/Payments_Cards_Variable_Fee__c.field-meta.xml
<CustomField>
    <fullName>Payments_Cards_Variable_Fee__c</fullName>
    <description>legacy field</description>
    <label>Payments Cards Variable Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>