force-app/main/default/objects/Opportunity/fields/Payments_Sepa_Variable_Fee__c.field-meta.xml
<CustomField>
    <fullName>Payments_Sepa_Variable_Fee__c</fullName>
    <label>Payments Sepa Variable Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>