force-app/main/default/objects/Opportunity/fields/Payments_Subscription_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payments_Subscription_Amount__c</fullName>
    <description>legacy field</description>
    <label>Payments Subscription Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>