force-app/main/default/objects/Opportunity/fields/Payout_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Payout_Data_Source__c</fullName>
    <label>Payout Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>