force-app/main/default/objects/Opportunity/fields/Payouts_ACH_Fixed_Fee__c.field-meta.xml
<CustomField>
    <fullName>Payouts_ACH_Fixed_Fee__c</fullName>
    <description>legacy field used for payment rails</description>
    <label>Payouts ACH Fixed Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>