force-app/main/default/objects/Opportunity/fields/Payouts_ACH_Variable_Fee__c.field-meta.xml
<CustomField>
    <fullName>Payouts_ACH_Variable_Fee__c</fullName>
    <description>legacy field</description>
    <label>Payouts ACH Variable Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>