force-app/main/default/objects/Opportunity/fields/Payouts_API__c.field-meta.xml
<CustomField>
    <fullName>Payouts_API__c</fullName>
    <description>legacy field</description>
    <label>Payouts API</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wires</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>SEPA</fullName>
            </value>
            <value>
                <fullName>USDC</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>