force-app/main/default/objects/Opportunity/fields/Payouts_Rails__c.field-meta.xml
<CustomField>
    <fullName>Payouts_Rails__c</fullName>
    <description>legacy field</description>
    <label>Payouts Rails</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEPA</fullName>
            </value>
            <value>
                <fullName>Crypto Payments</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
                <isActive>false</isActive>
                <label>ACH</label>
            </value>
            <value>
                <fullName>Cards</fullName>
                <isActive>false</isActive>
                <label>Cards</label>
            </value>
            <value>
                <fullName>Wires</fullName>
                <isActive>false</isActive>
                <label>Wires</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>